@@ -336,36 +336,6 @@ default_track_checked(char type) {
 }
 
 void
-set_combobox_selection(wxComboBox *cb,
-                       const wxString wanted) {
-  int i, count;
-
-  cb->SetValue(wanted);
-  count = cb->GetCount();
-  for (i = 0; count > i; ++i)
-    if (cb->GetString(i) == wanted) {
-      cb->SetSelection(i);
-      break;
-    }
-}
-
-#if defined(USE_WXBITMAPCOMBOBOX)
-void
-set_combobox_selection(wxBitmapComboBox *cb,
-                       const wxString wanted) {
-  int i, count;
-
-  cb->SetValue(wanted);
-  count = cb->GetCount();
-  for (i = 0; count > i; ++i)
-    if (cb->GetString(i) == wanted) {
-      cb->SetSelection(i);
-      break;
-    }
-}
-#endif  // USE_WXBITMAPCOMBOBOX
-
-void
 wxdie(const wxString &errmsg) {
   wxMessageBox(errmsg, wxT("A serious error has occured"),
                wxOK | wxICON_ERROR);
